links again again

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
 
     <title>Tems Blog</title>
   </head>
@@ -11,11 +11,11 @@
     <nav class="links">
       <a href="index.html">Home</a>
 
-      <a href="te-houtawa-template.html">Stories</a>
+      <a href="blog/te-houtawa-template.html">Stories</a>
 
-      <a href="tech.html">Tech</a>
+      <a href="blog/tech.html">Tech</a>
 
-      <a href="core.html">Core</a>
+      <a href="blog/core.html">Core</a>
     </nav>
 
     <div class="image-wrapper">
@@ -40,20 +40,20 @@
           <h2>Stories</h2>
           <p>Read about Te Houtawa and more to come</p>
 
-          <a href="te-houtawa-template.html">read more -> </a>
+          <a href="blog/te-houtawa-template.html">read more -> </a>
         </div>
         <div class="blog-box-2">
           <h2>Core study</h2>
           <p>The human part of the web dev equation</p>
 
-          <a href="core.html">read more -> </a>
+          <a href="blog/core.html">read more -> </a>
         </div>
 
         <div class="blog-box-3">
           <h2>Tech Stuff</h2>
           <p>All the technical no how on web dev</p>
 
-          <a href="tech.html">read more -> </a>
+          <a href="blog/tech.html">read more -> </a>
         </div>
       </div>
 
